--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
 
 body{
     margin: 0px;
 }
+
+$background-color: #D8E2DC;
+$background-btn-menu-item : #C2AEB3;
+$background-btn-menu-item-hover : #D5C5C8;
+$placeholder-background : #D9D9D9;
