--- a/src/app/component/admin-setting-page/admin-setting-page.component.html
+++ b/src/app/component/admin-setting-page/admin-setting-page.component.html
@@ -1,1 +1,6 @@
-<p>admin-setting-page works!</p>
+<div class="button-container">
+  <app-button-group
+    [buttonGroup]="buttonGroup"
+    (clickButtonEmitter)="onClickButton($event)"
+  ></app-button-group>
+</div>
