--- a/src/app/component/friend-page/friend-page.component.html
+++ b/src/app/component/friend-page/friend-page.component.html
@@ -1,1 +1,50 @@
-<p>friend-page works!</p>
+<div class="button-container">
+  <app-button-group
+    [buttonGroup]="buttonGroup"
+    (clickButtonEmitter)="onClickButton($event)"
+  ></app-button-group>
+</div>
+
+<div class="content-container">
+  <p-table
+    [(selection)]="selectedFriendList"
+    [value]="friendList"
+    dataKey="id"
+    [scrollable]="true"
+    scrollDirection="horizontal"
+    [tableStyle]="{ 'min-width': '50rem' }"
+    (selectionChange)="onSelectionChange($event)"
+  >
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width: 4rem">
+          <p-tableHeaderCheckbox />
+        </th>
+        <th class="text-center">Firstname</th>
+        <th class="text-center">Lastname</th>
+        <th class="text-center">Is Favorite</th>
+        <th class="text-center">BirthDay</th>
+        <th class="text-center">Phone No</th>
+        <th class="text-center">Gender</th>
+        <th class="text-center">Remark</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-friend>
+      <tr>
+        <td><p-tableCheckbox [value]="friend" /></td>
+        <td>{{ friend.firstName }}</td>
+        <td>{{ friend.lastName }}</td>
+        <td style="text-align: center">
+          <span *ngIf="friend.isFavorite; else notFav">★</span>
+          <ng-template #notFav>-</ng-template>
+        </td>
+        <td class="text-center">
+          {{ friend.birthDate | date : "mediumDate" }}
+        </td>
+        <td class="text-center">{{ friend.phoneNumber }}</td>
+        <td class="text-center">{{ friend.gender }}</td>
+        <td>{{ friend.remark }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
