--- a/src/app/component/main-page/main-page.component.scss
+++ b/src/app/component/main-page/main-page.component.scss
@@ -58,8 +58,11 @@
 }
 
 .content {
+  background-color: #ffffff;
+  border-radius: 1.5rem;
   padding: 2rem 1rem;
-  height: 90vh;
+  margin: 1rem 0 0 0;
+  height: 85vh;
 }
 
 .nav-top-bar {
