--- a/src/app/component/friend-page/friend-page.component.scss
+++ b/src/app/component/friend-page/friend-page.component.scss
@@ -7,5 +7,26 @@
   vertical-align: middle;
 }
 
+.caption-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.caption-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.search input {
+  width: 50vw;
+}
+
 :host::ng-deep {
 }
