[SS] : set disable field for button component

--- a/shared/component/button-group/button-group.component.html
+++ b/shared/component/button-group/button-group.component.html
@@ -2,6 +2,7 @@
   <div *ngFor="let button of buttonGroup">
     <app-button
       [buttonName]="button"
+      [disabledButton]="checkDisabledButton(button)"
       (clickButtonEmitter)="onClickButton($event)"
     ></app-button>
   </div>
