--- a/shared/component/button/button.component.html
+++ b/shared/component/button/button.component.html
@@ -2,6 +2,7 @@
   <p-button
     [label]="buttonName"
     [raised]="true"
+    [disabled]="disabledButton"
     [ngClass]="{
       'add-button': buttonName === BUTTON_NAME.ADD,
       'edit-button': buttonName === BUTTON_NAME.EDIT,
