--- a/src/app/component/admin-setting-page/admin-setting-page.component.html
+++ b/src/app/component/admin-setting-page/admin-setting-page.component.html
@@ -1,6 +1,7 @@
 <div class="button-container">
   <app-button-group
     [buttonGroup]="buttonGroup"
+    [selectedItem]="selectedItem"
     (clickButtonEmitter)="onClickButton($event)"
   ></app-button-group>
 </div>
