--- a/src/app/component/role-permission-page/role-permission-page.component.html
+++ b/src/app/component/role-permission-page/role-permission-page.component.html
@@ -1,3 +1,52 @@
-<p>
-  role-permission-page works!
-</p>
+<div class="button-container">
+  <app-button-group
+    [buttonGroup]="buttonGroup"
+    [selectedItem]="selectedRolePermissionList"
+    (clickButtonEmitter)="onClickButton($event)"
+  ></app-button-group>
+</div>
+
+<div class="content-container">
+  <p-table
+    [(selection)]="selectedRolePermissionList"
+    [value]="rolePermissionList"
+    [rows]="5"
+    [scrollable]="true"
+    scrollDirection="horizontal"
+    dataKey="id"
+    [tableStyle]="{ 'min-width': '40rem' }"
+    (selectionChange)="onSelectionChange($event)"
+  >
+    <ng-template pTemplate="caption">
+      <div class="caption-container">
+        <div class="title">Role Permission List</div>
+        <div class="search">
+          <input
+            type="text"
+            pInputText
+            [formControl]="searchField"
+            placeholder="Search role..."
+          />
+        </div>
+      </div>
+    </ng-template>
+
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width: 4rem">
+          <p-tableHeaderCheckbox />
+        </th>
+        <th>Role Name</th>
+        <th>Remark</th>
+      </tr>
+    </ng-template>
+
+    <ng-template pTemplate="body" let-role>
+      <tr>
+        <td><p-tableCheckbox [value]="role" /></td>
+        <td>{{ role.roleName }}</td>
+        <td>{{ role.remark }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
