--- a/src/app/component/role-permission-page/role-permission-page.component.html
+++ b/src/app/component/role-permission-page/role-permission-page.component.html
@@ -3,6 +3,7 @@
     [buttonGroup]="buttonGroup"
     [selectedItem]="selectedRolePermissionList"
     (clickButtonEmitter)="onClickButton($event)"
+    [buttonJustifyContent]="'end'"
   ></app-button-group>
 </div>
 
