--- a/src/app/component/admin-setting-page/admin-setting-page-detail/admin-setting-page-detail.component.scss
+++ b/src/app/component/admin-setting-page/admin-setting-page-detail/admin-setting-page-detail.component.scss
@@ -1,5 +1,3 @@
-
-
 .field-layout {
   display: flex;
   justify-content: space-between;
@@ -10,4 +8,8 @@
 ::ng-deep .custom-dialog .p-dialog-content {
   padding: 2rem;
   overflow-y: auto;
+}
+
+.form-content {
+  padding: 2rem 10vw;
 }
