--- a/src/app/component/role-permission-page/role-permission-detail-page/role-permission-detail-page.component.scss
+++ b/src/app/component/role-permission-page/role-permission-detail-page/role-permission-detail-page.component.scss
@@ -1,5 +1,3 @@
-
-
 .field-layout {
   display: flex;
   justify-content: space-between;
@@ -7,7 +5,6 @@
   flex-wrap: wrap; /* responsive fallback */
 }
 
-::ng-deep .custom-dialog .p-dialog-content {
-  padding: 2rem;
-  overflow-y: auto;
+.role-name-input {
+  display: flex;
 }
