[SS] : get list of user list and create dropdown service

--- a/shared/component/form-input/form-input.component.html
+++ b/shared/component/form-input/form-input.component.html
@@ -50,7 +50,7 @@
   <div *ngSwitchCase="'Dropdown'">
     <p-dropdown
       [options]="dropdownOption"
-      [optionLabel]="optionName"
+      [optionLabel]="optionLabel"
       [optionValue]="optionValue"
       [class]="inputClass"
       [ngClass]="{
