--- a/src/app/component/admin-setting-page/admin-setting-page.component.scss
+++ b/src/app/component/admin-setting-page/admin-setting-page.component.scss
@@ -34,3 +34,10 @@
     border-radius: 0.75rem 0.75rem 0 0;
   }
 }
+
+.text-truncate-cell td {
+  max-width: 15vw;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
