--- a/src/app/component/friend-page/friend-page-dialog/friend-page-dialog.component.html
+++ b/src/app/component/friend-page/friend-page-dialog/friend-page-dialog.component.html
@@ -57,10 +57,12 @@
       ></app-form-input>
     </div>
   </form>
-  <app-button-group
-    [buttonGroup]="buttonGroup"
-    [selectedItem]="null"
-    [buttonJustifyContent]="'center'"
-    (clickButtonEmitter)="onClickButton($event)"
-  ></app-button-group>
+  <div class="button-container">
+    <app-button-group
+      [buttonGroup]="buttonGroup"
+      [selectedItem]="null"
+      [buttonJustifyContent]="'center'"
+      (clickButtonEmitter)="onClickButton($event)"
+    ></app-button-group>
+  </div>
 </div>
