--- a/src/app/component/friend-page/friend-page.component.html
+++ b/src/app/component/friend-page/friend-page.component.html
@@ -1,4 +1,4 @@
-<div class="button-container">
+<div class="button-container flex-end">
   <app-button-group
     [buttonGroup]="buttonGroup"
     [selectedItem]="selectedFriendList"
