--- a/shared/component/button/button.component.html
+++ b/shared/component/button/button.component.html
@@ -1,16 +1,18 @@
-<div *ngIf="buttonName !== null">
-  <p-button
-    [label]="buttonName"
-    [raised]="true"
-    [disabled]="disabledButton"
-    [ngClass]="{
-      'add-button':
-        buttonName === BUTTON_NAME.ADD || buttonName === BUTTON_NAME.SAVE,
-      'edit-button': buttonName === BUTTON_NAME.EDIT,
-      'delete-button': buttonName === BUTTON_NAME.DELETE,
-      'export-button': buttonName === BUTTON_NAME.EXPORT,
-      'cancel-button': buttonName === BUTTON_NAME.CANCEL
-    }"
-    (onClick)="onClickButton(buttonName)"
-  />
-</div>
+<p-button
+  *ngIf="buttonName !== null"
+  [label]="buttonName === BUTTON_NAME.GENERATE ? '' : buttonName"
+  [icon]="buttonName === BUTTON_NAME.GENERATE ? 'pi pi-key' : ''"
+  [raised]="true"
+  [disabled]="disabledButton"
+  [ngClass]="{
+    'add-button':
+      buttonName === BUTTON_NAME.ADD || buttonName === BUTTON_NAME.SAVE,
+    'edit-button': buttonName === BUTTON_NAME.EDIT,
+    'delete-button': buttonName === BUTTON_NAME.DELETE,
+    'export-button': buttonName === BUTTON_NAME.EXPORT,
+    'cancel-button': buttonName === BUTTON_NAME.CANCEL,
+    'generate-button': buttonName === BUTTON_NAME.GENERATE,
+    'reset-password-button': buttonName === BUTTON_NAME.RESET_PASSWORD
+  }"
+  (onClick)="onClickButton(buttonName)"
+/>
