--- a/shared/component/button/button.component.scss
+++ b/shared/component/button/button.component.scss
@@ -37,6 +37,18 @@
     border: 1px solid #f5b7b1;
   }
 
+  .generate-button > button {
+    background-color: #6c5ce7 !important;
+    border: 1px solid #6c5ce7;
+    width: 3vw;
+  }
+
+  .reset-password-button > button {
+    background-color: #84c5f4 !important; /* Teal/Cyan */
+    border: 1px solid #84c5f4;
+    border: none;
+  }
+
   .p-button:focus {
     outline: none !important;
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
