--- a/src/app/component/friend-page/friend-page-dialog/friend-page-dialog.component.scss
+++ b/src/app/component/friend-page/friend-page-dialog/friend-page-dialog.component.scss
@@ -1,5 +1,3 @@
-
-
 .field-layout {
   display: flex;
   justify-content: space-between;
@@ -10,4 +8,10 @@
 ::ng-deep .custom-dialog .p-dialog-content {
   padding: 2rem;
   overflow-y: auto;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center; /* optional: vertically align if heights differ */
 }
