--- a/src/app/component/admin-setting-page/admin-setting-page-detail/admin-setting-page-detail.component.html
+++ b/src/app/component/admin-setting-page/admin-setting-page-detail/admin-setting-page-detail.component.html
@@ -19,7 +19,7 @@
       <app-form-input
         [inputType]="'Text'"
         [fieldName]="'Username'"
-        [formControlName]="'username'"
+        [formControlName]="'userName'"
         [inputClass]="'input-text-width-20vw'"
       ></app-form-input>
 
@@ -76,6 +76,7 @@
         [fieldName]="'Register Date'"
         [formControlName]="'registerDate'"
         [inputClass]="'input-width-20vw'"
+        [isShowTimeDatePicker]="true"
       ></app-form-input>
     </div>
 
