--- a/src/app/component/admin-setting-page/reset-password-dialog/reset-password-dialog.component.html
+++ b/src/app/component/admin-setting-page/reset-password-dialog/reset-password-dialog.component.html
@@ -1,3 +1,20 @@
-<p>
-  reset-password-dialog works!
-</p>
+<div>
+  <form action="" [formGroup]="formGroup">
+    <div>
+      <app-form-input
+        [inputType]="'Text'"
+        [fieldName]="'New Password'"
+        [formControlName]="'newPassword'"
+        [inputClass]="'input-text-width-20vw'"
+        [isGeneratePassword]="true"
+      ></app-form-input>
+    </div>
+    <app-button-group
+      class="button-container"
+      [buttonGroup]="buttonGroup"
+      [selectedItem]="[]"
+      [buttonJustifyContent]="'end'"
+      (clickButtonEmitter)="onClickButton($event)"
+    />
+  </form>
+</div>
