[SS] : integrate login logout page

--- a/shared/component/confirmation-dialog/confirmation-dialog.component.html
+++ b/shared/component/confirmation-dialog/confirmation-dialog.component.html
@@ -6,6 +6,7 @@
 </div>
 <div>
   <app-button-group
+    class="button-container"
     [buttonGroup]="buttonGroup"
     [selectedItem]="[]"
     (clickButtonEmitter)="onClickButton($event)"
