--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-loading></app-loading>
 <router-outlet></router-outlet>
+<p-toast position="top-left" key="tl" />
+<p-toast position="top-right" key="tr" />
+<p-toast position="bottom-left" key="bl" />
+<p-toast position="bottom-right" key="br" />
