--- a/shared/component/confirmation-dialog/confirmation-dialog.component.scss
+++ b/shared/component/confirmation-dialog/confirmation-dialog.component.scss
@@ -2,3 +2,8 @@
   padding: 0 2rem 2rem 2rem;
   overflow-y: auto;
 }
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center; /* optional: vertically align if heights differ */
+}
